[gd_scene format=3 uid="uid://5jlea1prliur"]

[ext_resource type="Script" uid="uid://cjlguvbeycdcb" path="res://Scripts/UI/battle_result_layer.gd" id="1_t3l0d"]
[ext_resource type="FontFile" uid="uid://dv5gofkx77peh" path="res://Graphics/PlaceholderSource/Dungeon Mode Font/dungeon-mode.ttf" id="2_iy7ov"]
[ext_resource type="Texture2D" uid="uid://c376h7t33pa0t" path="res://Graphics/PlaceholderSource/Kenny Art/Fantasy UI/Default/Panel/panel-003.png" id="3_nimub"]
[ext_resource type="AnimationLibrary" uid="uid://dmkql0isinmty" path="res://Resources/Animations/fade_layer.res" id="4_iy7ov"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njocm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1omi6"]
content_margin_left = 26.0
content_margin_top = 18.0
content_margin_right = 26.0
content_margin_bottom = 18.0
texture = ExtResource("3_nimub")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fvvvu"]
load_path = "res://.godot/imported/panel-003.png-2da624981b42830125a8f21c4185f849.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yn0b8"]
content_margin_left = 26.0
content_margin_top = 18.0
content_margin_right = 26.0
content_margin_bottom = 18.0
texture = SubResource("CompressedTexture2D_fvvvu")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
modulate_color = Color(0.4109551, 0.15690279, 0.36061883, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vw6we"]
content_margin_left = 26.0
content_margin_top = 18.0
content_margin_right = 26.0
content_margin_bottom = 18.0
texture = ExtResource("3_nimub")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
modulate_color = Color(0.31907254, 0.33031124, 0.5477941, 1)

[node name="BattleResultDisplay" type="CanvasLayer" unique_id=1254281250]
layer = 8
script = ExtResource("1_t3l0d")

[node name="Control" type="Control" parent="." unique_id=579982368]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Control" unique_id=1863527018]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_njocm")
metadata/_edit_use_anchors_ = true

[node name="DisplayElements" type="MarginContainer" parent="Control" unique_id=308342657]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_right = 340.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_constants/margin_top = 150

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DisplayElements" unique_id=508273587]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="Control/DisplayElements/VBoxContainer" unique_id=1672779844]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.98039216, 0.8, 0.08235294, 1)
theme_override_fonts/font = ExtResource("2_iy7ov")
theme_override_font_sizes/font_size = 51
text = "VICTORY-Defeat?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RewardLabel" type="Label" parent="Control/DisplayElements/VBoxContainer" unique_id=220778692]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.67058825, 0.54901963, 0.05490196, 1)
theme_override_fonts/font = ExtResource("2_iy7ov")
theme_override_font_sizes/font_size = 27
text = "Rewards:"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Control/DisplayElements/VBoxContainer" unique_id=1983343562]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.90588236, 0.92156863, 1)
theme_override_fonts/font = ExtResource("2_iy7ov")
theme_override_font_sizes/font_size = 27
text = "gold:000"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/DisplayElements/VBoxContainer" unique_id=2097430152]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="HBoxContainer" type="HBoxContainer" parent="Control/DisplayElements/VBoxContainer/MarginContainer" unique_id=100303533]
layout_mode = 2

[node name="Option1" type="Button" parent="Control/DisplayElements/VBoxContainer/MarginContainer/HBoxContainer" unique_id=2096353967]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_iy7ov")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxTexture_1omi6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yn0b8")
theme_override_styles/hover = SubResource("StyleBoxTexture_vw6we")
text = "Option 1"

[node name="Option2" type="Button" parent="Control/DisplayElements/VBoxContainer/MarginContainer/HBoxContainer" unique_id=1196615696]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_iy7ov")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxTexture_1omi6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yn0b8")
theme_override_styles/hover = SubResource("StyleBoxTexture_vw6we")
text = "Option 2"

[node name="Option3" type="Button" parent="Control/DisplayElements/VBoxContainer/MarginContainer/HBoxContainer" unique_id=855413471]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_iy7ov")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxTexture_1omi6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yn0b8")
theme_override_styles/hover = SubResource("StyleBoxTexture_vw6we")
text = "Option 3"

[node name="MarginContainer" type="MarginContainer" parent="Control" unique_id=397301931]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.5
offset_top = -140.0
offset_right = 118.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 80

[node name="Continue" type="Button" parent="Control/MarginContainer" unique_id=2006672546]
visible = false
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_iy7ov")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxTexture_1omi6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yn0b8")
theme_override_styles/hover = SubResource("StyleBoxTexture_vw6we")
text = "Continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1860353629]
libraries/fade_layer = ExtResource("4_iy7ov")

[node name="MarchPosition" type="Node2D" parent="." unique_id=1821419925]
position = Vector2(581, 436)

[node name="DisplayTimer" type="Timer" parent="." unique_id=866620706]

[node name="DeathDelayTimer" type="Timer" parent="." unique_id=1595403890]

[connection signal="button_up" from="Control/MarginContainer/Continue" to="." method="_on_continue_button_up"]
[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
